[package]
name = "mazes-for-programmers"
version = "0.1.0"
authors = ["Tristian Barrett <trbarrett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.98.0"
im = "14.2.0"
rpds = "0.7.0"
rand = "0.7.3"
itertools = "0.8.2"
chrono = "0.4"
